# toy-cli

./: .gitignore  Cargo.toml  README.md  test.rest
assets/: players.csv
fixtures/: b64.txt  blake3.txt  chacha20_key.txt  chacha20_nonce.txt  ed25519.pk  ed25519.sk  hello_encode.txt  hello_encrypt.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv_opts.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
