[package]
name = "toy-cli"
version = "0.1.0"
edition = "2021"
authors = ["jason tian <18215513386@163.com>"]


[dependencies]
anyhow = "1.0.92"
base64 = "0.22.1"
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.33"
zxcvbn = "3.1.0"
