[package]
name = "toy-cli"
version = "0.1.0"
edition = "2021"
authors = ["jason tian <18215513386@163.com>"]


[dependencies]
anyhow = "1.0.92"
axum = { version = "0.7.7", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures-util = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.33"
tokio = { version = "1.41.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "fs",
] }
tower-http = { version = "0.6.1", features = [
  "compression-full",
  "trace",
  "cors",
  "fs",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "3.1.0"
